--- a/_pages/404.md
+++ b/_pages/404.md
@@ -5,7 +5,7 @@ permalink: /404.html
 author_profile: false
 ---
 
-Page Not Found
+Sorry, but the page you were trying to view does not exist.
 
 <script>
   var GOOG_FIXURL_LANG = 'en';
