--- a/_posts/Blog/2022-07-13-Colab-VSC.md
+++ b/_posts/Blog/2022-07-13-Colab-VSC.md
@@ -27,8 +27,20 @@ last_modified_at: 2022-07-13T13:30-14:00
 
 ~~[너도 써. 두번 써](https://code.visualstudio.com/)~~
 
-![vsc](/assets/images/colab-vsc/vsc.PNG){: width="50%" height="50%"}
+![vsc](/assets/images/colab-vsc/vsc.PNG){: width="80%" height="80%"}
 
 # Colab
 Deep learning을 공부한다거나 간단한 python 코드 테스트를 한다거나 할때 Colab을 많이 사용한다. 구글의 값비싼 GPU를 인터넷만 있다면 마음대로 쓸 수 있다는건 Colab만의 완벽한 강점이라고 할 수 있을 것이다. ~~이거 좋은데? 라는 생각이 들때쯤 돈 달라고 하는게 단점이다.~~ 물론 무료 버전에선 사용량에 제한이 걸려있긴 하지만 학부생 입장에서 생각해보자면 이틀, 삼일 내내 학습만 돌리고 있을건 아니기 때문에 충분하다고 생각한다.
+
+![colab](/assets/images/colab-vsc/colab.JPG){: width="80%" height="80%"}
+
+# Colab in VSC
+VSC와 Colab 모두 강력한 툴이지만 욕심이 많은 천재들은 VSC에서 Colab을 사용할 수 있는 법을 만들어놨다. 실로 편하지 않을 수 없다.
+
+VSC에서 Colab을 사용하기 위해서는 Colab과 VSC 양쪽에 작업을 해야한다.
+
+
+
+
+
 
