--- a/_posts/Blog/2022-07-13-Colab-VSC.md
+++ b/_posts/Blog/2022-07-13-Colab-VSC.md
@@ -58,7 +58,7 @@ launch_ssh_cloudflared(password="1234")     # Set your password
 
 이때 비밀번호는 추후에 VSC에서 원격으로 접속할 때 입력할 예정이니 적당히 어렵지 않은 것으로 정하길 권장한다.
 
-> Colab shell 단위 실행: Shift + Enter 또는 Ctrl + Enter
+> Colab shell 단위 실행: **Shift + Enter** 또는 **Ctrl + Enter**
 
 위 스크립트를 실행시키면 다음과 같이 원격으로 접속할 수 있게 해주는 주소가 보일 것이다. 우측 아래의 **VSCode Remote SSH**의 주소를 복사해두면 된다.
 
@@ -82,4 +82,62 @@ launch_ssh_cloudflared(password="1234")     # Set your password
 해당 위치를 잘 기억해두자.
 
 # 3. VSC에서 마지막 setting
+원격 SSH로 접속하기 위해서 extension을 하나 설치해야 한다. VSC 좌측의 Extension을 클릭한 후 **Remote SSH**를 검색해서 설치해준다.
+
+![vsc1](/assets/images/colab-vsc/vsc1.png)
+
+> VSC 명령창 실행: **Ctrl + Shift + P**
+
+설치가 끝나면 명령창을 열어 **Remote SSH: Open SSH Configuration File**을 찾아 선택한다. 그럼 아래와 같은 옵션이 뜰텐데 여기서 *C:\User\사용자이름\.ssh\config*를 선택한다.
+
+![vsc2](/assets/images/colab-vsc/vsc2.png)
+![vsc3](/assets/images/colab-vsc/vsc3.png)
+
+그럼 아래와 같은 config 파일을 확인할 수 있을 것이다. 이제 이 내용을 바꿔줘야 한다. 원래 있던 내용을 모두 주석 처리하고 아래 내용을 붙여넣는다.
+
+```bash
+Host *.trycloudflare.com
+    HostName %h
+    User root
+    Port 22
+    ProxyCommand <PUT_THE_ABSOLUTE_CLOUDFLARE_PATH_HERE> access ssh --hostname %h
+```
+
+**<PUT_THE_ABSOLUTE_CLOUDFLARE_PATH_HERE>** 에는 아까 설치한 *Cloudflared*의 절대 경로를 넣어주면 된다.
+
+![vsc4](/assets/images/colab-vsc/vsc4.png)
+![vsc5](/assets/images/colab-vsc/vsc5.png)
+
+이제 준비는 다 끝났다.
+
+# 4.VSC에서 Colab에 접근하기
+![vsc6](/assets/images/colab-vsc/vsc6.png)
+
+위 창에서 다시 VSC 명령창(**Ctrl + Shift + P**)을 열어준다. 그리고 **Remote SSH: Connect to Host**를 클릭하면 호스트 주소를 입력할 수 있는 주소창이 뜰 것이다. 여기에 아까 Colab에서 얻었던 원격 주소를 입력하고 Enter를 눌러준다.
+
+![vsc7](/assets/images/colab-vsc/vsc7.png)
+
+그럼 새로운 VSC 창이 하나 뜰 것이다. 그리고 금방 명령창이 뜰텐데 여기서 만약 OS를 묻는다면 Linux를 선택해야 한다. 그 다음엔 지금까지 문제가 없이 진행됐다면 원격 주소로 접근하기 위해 비밀번호를 물어볼 것이다. Colab에서 원격 주소를 생성할 때 설정한 비밀번호를 입력하고 Enter를 눌렀을 때 별다른 에러가 뜨지 않는다면 성공한 것이다. 이제 좌측 하단의 초록색 박스에 Colab에서 생성한 원격 주소가 있는 것을 확인할 수 있다.
+
+![vsc8](/assets/images/colab-vsc/vsc8.png)
+
+# 5. File directory 찾아가기
+
+![vsc9](/assets/images/colab-vsc/vsc9.png)
+
+좌측 제일 상단의 탐색기를 누르고 **폴더 열기**를 누르면 위 그림과 같이 Colab의 파일 탐색이 가능할 것이다. 드라이브 내의 폴더 (구글 드라이브를 마운트 했다면)뿐 아니라 사용자가 사용하는 파일들은 /content/ 아래에 위치한다. 주소창에서 *root*를 지우고 *content*를 입력하면 *drive, sample_data* 등의 폴더를 확인할 수 있을 것이다.
+
+구글 드라이브를 마운트한 상태라면 드라이브 위치는 **/content/drive/MyDrive/** 이다. 해당 위치로 이동하면 곧 드라이브에 있는 파일들을 확인할 수 있을 것이다.
+
+![vsc10](/assets/images/colab-vsc/vsc10.png)
+
+# Colab GPU 확인하기
+Colab에 연결된 VSC에서 터미널을 열어 ```nvidia-smi```를 입력하면 현재 연결된 원격 GPU에 대한 정보를 확인할 수 있다.
+
+> VSC 터미널 열기: **Ctrl + `**
+>
+> **`** <- 작은 따옴표 아님. 키보드 좌측 상단에 있는 어퍼스트로피(물결)!
+
+![vsc11](/assets/images/colab-vsc/vsc11.png)
+
 
