Update colab vsc

--- a/_posts/Blog/2022-07-13-Colab-VSC.md
+++ b/_posts/Blog/2022-07-13-Colab-VSC.md
@@ -103,7 +103,7 @@ Host *.trycloudflare.com
     ProxyCommand <PUT_THE_ABSOLUTE_CLOUDFLARE_PATH_HERE> access ssh --hostname %h
 ```
 
-<PUT_THE_ABSOLUTE_CLOUDFLARE_PATH_HERE> 에는 아까 설치한 *Cloudflared*의 절대 경로를 넣어주면 된다.
+**PUT_THE_ABSOLUTE_CLOUDFLARE_PATH_HERE** 에는 아까 설치한 *Cloudflared*의 절대 경로를 넣어주면 된다.
 
 ![vsc4](/assets/images/colab-vsc/vsc4.PNG)
 ![vsc5](/assets/images/colab-vsc/vsc5.PNG)
